# plugins

./: .gitignore  README.md
AdminerSQL/: CHANGELOG  README.md
AdminerSQL/backend/: AdminerSQL.pm
DebugBar/: CHANGELOG  DebugBar.php  README.md  config.php  info.php
DebugBar/Component/: Database.php  Files.php  Interface.php  Memory.php  Timer.php  Variables.php  Version.php
Demo/: CHANGELOG  Demo.php  README  README.md  config.php  info.php
DomainAutoApproval/: CHANGELOG  DomainAutoApproval.php  README  README.md  config.php  info.php
FacebookAuth/: README  info.php
HelloWorld/: CHANGELOG  HelloWorld.php  README  README.md  info.php
Mailgraph/: CHANGELOG  Mailgraph.php  README.md  cronjob.pl  info.php
Mailgraph/backend/: Mailgraph.pm
Mailgraph/frontend/: mailgraph.php  mailgraph.tpl  mailgraphics.php
Mailman/: CHANGELOG  Mailman.php  README.md  info.php
Mailman/backend/: Mailman.pm
Mailman/frontend/: mailman.php  mailman.tpl
Mailman/frontend/Mailman/: Mailman.php  README  info.php
Monitorix/: CHANGELOG  Monitorix.php  README.md  config.php  info.php
Monitorix/backend/: Monitorix.pm
Monitorix/frontend/: monitorix.php  monitorix.tpl  monitorixgraphics.php
RemoteBridge/: CHANGELOG  README.md  RemoteBridge.php  info.php
RemoteBridge/frontend/: remotebridge.php  remotebridge.tpl
RemoteBridge/public/: remotebridge.php
WHMCS-Bridge/: README
incubator/: README.md
incubator/AdminerSQL/: AdminerSQL.php  CHANGELOG  README.md  config.php  info.php
incubator/AdminerSQL/adminer-sources/: compile.php
incubator/AdminerSQL/backend/: AdminerSQL.pm
incubator/AdminerSQL/frontend/: adminer.php  editor.php
incubator/ApsStandard/: ApsStandard.php  CHANGELOG  README.md  info.php
incubator/ClamAV/: CHANGELOG  ClamAV.php  README.md  config.php  info.php
incubator/ClamAV/backend/: ClamAV.pm
incubator/CronJobs/: CHANGELOG  CronJobs.php  README.md  config.php  info.php  update_errata.md
incubator/DebugBar/: CHANGELOG  Component.php  DebugBar.php  README.md  config.php  info.php
incubator/Demo/: CHANGELOG  Demo.php  README.md  config.php  info.php
incubator/DomainAutoApproval/: CHANGELOG  DomainAutoApproval.php  README.md  config.php  info.php
incubator/HelloWorld/: CHANGELOG  HelloWorld.php  README.md  info.php
incubator/ImscpBoxBilling/: CHANGELOG  ImscpBoxBilling.php  README.md  boxbilling.php  config.php  info.php
incubator/InstantSSH/: CHANGELOG  InstantSSH.php  README.md  TODO  config.php  info.php  update_errata.md
incubator/JailKit/: CHANGELOG  JailKit.php  README.md  TODO  config.php  info.php
incubator/JailKit/sources/: Makefile.in  configure.ac
incubator/JailKit/sources/debian/: changelog  copyright  dirs  postinst  postrm  prerm  rules
incubator/JailKit/sources/ini/: jk_init.ini  jk_uchroot.ini
incubator/JailKit/sources/man/: Makefile.in  jk_check.8  jk_chrootlaunch.8  jk_chrootsh.8  jk_init.8  jk_jailuser.8  jk_procmailwrapper.8  jk_uchroot.8
incubator/JailKit/sources/py/: jk_addjailuser.in  jk_check.in  jk_cp.in  jk_init.in  jk_update.in
incubator/JailKit/sources/src/: Makefile.in  iniparser.h  iniparsertester.c  jk_chrootlaunch.c  jk_lib.c  jk_lib.h  jk_lsh.c  jk_procmailwrapper.c  passwdparser.c  passwdparser.h  utils.c  utils.h  wordexp.c
incubator/KaziWhmcs/: CHANGELOG  ERRATA.md  KaziWhmcs.php  README.md  TODO  config.php  info.php  whmcs.php
incubator/Mailgraph/: CHANGELOG  Mailgraph.php  README.md  config.php  cronjob.pl  info.php
incubator/Mailman/: CHANGELOG  LICENSE  Mailman.php  README  README.md  config.php  info.php
incubator/Monitorix/: CHANGELOG  Monitorix.php  README.md  TODO  config.php  info.php
incubator/MyDNS/: CHANGELOG  MyDNS.php  README.md  api.php  config.php  info.php
incubator/Nolisting/: CHANGELOG  Readme.md  info.php  todo.txt
incubator/OpenDKIM/: CHANGELOG  OpenDKIM.php  README.md  TODO  UPDATE.md  config.php  info.php
incubator/OwnDDNS/: CHANGELOG  OwnDDNS.php  README.md  config.php  info.php
incubator/POP3Fetchmail/: CHANGELOG  POP3Fetchmail.php  README.md  config.php  info.php
incubator/PanelRedirect/: CHANGELOG  PanelRedirect.php  README.md  config.php  info.php
incubator/PhpSwitcher/: CHANGELOG  PhpSwitcher.php  README.md  TODO  config.php  info.php  update_errata.md
incubator/PolicydSPF/: CHANGELOG  PolicydSPF.php  README.md  config.php  info.php
incubator/PolicydWeight/: CHANGELOG  PolicydWeight.php  README.md  config.php  info.php
incubator/PostfixSmarthost/: PostfixSmarthost.php  README.md  config.php  info.php
incubator/Postgrey/: CHANGELOG  Postgrey.php  README.md  config.php  info.php
incubator/Postscreen/: CHANGELOG  Postscreen.php  README.md  config.php  info.php
incubator/RawPasswd/: README.md  RawPasswd.php  info.php
incubator/RecaptchaPMA/: CHANGELOG  README.md  RecaptchaPMA.php  config.php  info.php
incubator/RemoteBridge/: CHANGELOG  README.md  RemoteBridge.php  config.php  info.php
incubator/RoundcubePlugins/: CHANGELOG  README.md  RoundcubePlugins.php  TODO  config.php  info.php
incubator/ServerDefaultPage/: CHANGELOG  README.md  ServerDefaultPage.php  config.php  cronjob.pl  info.php
incubator/ServerProvisioning/: README  ServerProvisioning.php  autoload_classmap.php  bootstrap.php  composer.json  config.php  info.php
incubator/SpamAssassin/: CHANGELOG  README.md  SpamAssassin.php  TODO.md  UPDATE.md  config.php  info.php
incubator/TemplateEditor/: CHANGELOG  README.md  TODO  TemplateEditor.php  config.php  info.php
incubator/c0urier-whmcs/: README.md
(+1526 files in other folders)
